fix letter spacing in logo

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -9,7 +9,7 @@
   .logo {
     a {
       font-size: 1.2rem; // relative to the html's font size and that is equivalent to 16px
-      letter-spacing: 0.05rem;
+      letter-spacing: 0.5rem;
       color: $black; // this variable is coming from our variable sass
       text-decoration: none;
       font-weight: 700;
